[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"

[project]
name = "mcp-dnsdumpster"
version = "0.1.0"
description = "DNSDumpster MCP Server for querying DNS information"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Max Weeden", email = "mcp@greynova.xyz" }
]
keywords = ["mcp", "dns", "dnsdumpster", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/mcp-dnsdumpster"
"Bug Tracker" = "https://github.com/yourusername/mcp-dnsdumpster/issues"
"Repository" = "https://github.com/yourusername/mcp-dnsdumpster.git"

[project.scripts]
mcp-dnsdumpster = "mcp_dnsdumpster.server:main"
